<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diskbar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <string name="logo">Logo</string>
    <string name="large_text">Large Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="small_text">Small Text</string>
    <string name="only_text">Text</string>

    <string name="search_style">Style</string>
    <string name="search_place">Place</string>
    <string name="search_description">Description</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>
</resources>
